Project-Rentalcar-3/Solution-files/mysql-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mysql
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - image: mysql:8.0.35
        name: mysql
        ports:
        - containerPort: 3306
        resources: {}
        
      # volumes:
      # - name: mysql-pv-volume
      #   persistentVolumeClaim:
      #     claimName: mysql-pv-claim
