Project-Rentalcar-3/Solution-files/nginx-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-conf
          mountPath: /etc/nginx/nginx.conf
          # subPath: nginx.conf
          subPath: ~/nginx.conf
          readOnly: true
        # env:
        # - name: MYSQL_PASSWORD
        #   value: admin123
        # - name: MYSQL_DATABASE
        #   value: araba_kiralama
        # - name: MYSQL_DATABASE_HOST
        #   value: mysql
        # - name: DATABASE_HOST
        #   value: webserver
        # - name: MYSQL_USER
        #   value: admin
        resources: {}

      volumes:
      - name: nginx-conf
        configMap:
          name: nginx-conf
          items:
            - key: nginx.conf
              path: nginx.conf
