Project-Rentalcar-3/Solution-files/webserver-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: webserver
  name: webserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webserver
  template:
    metadata:
      labels:
        app: webserver
    spec:
      containers:
      - image: aydintokuslu/rentalcar:3.0
        name: webserver
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        resources:
            limits:
              cpu: 100m
            requests:
              cpu: 80m
