Project-Rentalcar-3/Solution-files/webserver-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: webserver
  name: webserver
spec:
  type: NodePort
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
    nodePort: 30005
  selector:
    app: webserver
